--- a/config/default/user.role.anonymous.yml
+++ b/config/default/user.role.anonymous.yml
@@ -18,6 +18,7 @@ permissions:
   - 'view files'
   - 'view media'
   - 'view own files'
+  - 'view terms in ceremonial_time'
   - 'view terms in collection'
   - 'view terms in contributor_roles'
   - 'view terms in contributors'
@@ -30,5 +31,6 @@ permissions:
   - 'view terms in local_origin'
   - 'view terms in nations'
   - 'view terms in regions'
+  - 'view terms in seasonal_time'
   - 'view terms in tags'
   - 'view terms in traditional_knowledge_tk_labels'
