--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -44,6 +44,7 @@ permissions:
   - 'view media'
   - 'view own field_make_role'
   - 'view own files'
+  - 'view terms in ceremonial_time'
   - 'view terms in collection'
   - 'view terms in contributor_roles'
   - 'view terms in contributors'
@@ -56,5 +57,6 @@ permissions:
   - 'view terms in local_origin'
   - 'view terms in nations'
   - 'view terms in regions'
+  - 'view terms in seasonal_time'
   - 'view terms in tags'
   - 'view terms in traditional_knowledge_tk_labels'
