--- a/config/default/field.storage.node.field_related_seasonal_time.yml
+++ b/config/default/field.storage.node.field_related_seasonal_time.yml
@@ -1,21 +1,20 @@
-uuid: 497a6487-9d72-44b0-8c1c-722fa012b906
+uuid: c4ea6edc-5111-4b4d-8459-14d11a502a75
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - node
+    - taxonomy
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_date_ceremonial_time
-field_name: field_date_ceremonial_time
+id: node.field_related_seasonal_time
+field_name: field_related_seasonal_time
 entity_type: node
-type: string
+type: entity_reference
 settings:
-  max_length: 255
-  case_sensitive: false
-  is_ascii: false
+  target_type: taxonomy_term
 module: core
 locked: false
 cardinality: 1
